--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -1,5 +1,8 @@
 {
-  "upsip": "Hostadresse von apcupsd",
-  "upsport": "Port von apcupsd",
-  "pollingInterval": "Abfrageintervall in Millisekunden"
+  "pollingInterval": "Abfrageintervall in Millisekunden",
+  "upsList": "Liste der zu überwachenden USV-Anlagen",
+  "upsIp": "IP-Adresse der USV",
+  "enterUpsIp": "Geben Sie die IP-Adresse der USV ein",
+  "upsPort": "Hafen von UPS",
+  "enterUpsPort": "Geben Sie den USV-Port ein"
 }
